# python-openevse-wifi

./: .codecov.yaml  .gitignore  LICENSE  README.md  openevsewifi.py  pyproject.toml  setup.py
.github/workflows/: main.yml
openevsewifi/: __init__.py
tests/: conftest.py  test_charger_interface.py
tests/fixtures/v1_responses/: ammeter.txt  capacity_range.txt  charge_limit.txt  charging_values_charging.txt  charging_values_unplugged.txt  faults.txt  settings.txt  status_charging.txt  status_unplugged.txt  temperature_settings.txt  temperature_values.txt  time.txt  time_limit_set.txt  time_limit_unset.txt  usage_charging.txt  usage_unplugged.txt  version.txt  voltmeter_settings.txt
tests/fixtures/v3_responses/: ammeter.txt  capacity_range.txt  charge_limit.txt  faults.txt  settings.txt  status_connected.txt  status_unplugged.txt  temperature_settings.txt  temperature_values.txt  time.txt  time_limit_set.txt  time_limit_unset.txt  usage_plugged.txt  version.txt  voltmeter_settings.txt
