[tool.poetry]
name = "openevsewifi"
version = "1.1.2"
description = "A python library for communicating with the ESP8266-based wifi module from OpenEVSE"
authors = ["Michelle Avery <dev@miniconfig.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/miniconfig/python-openevse-wifi"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"
Deprecated = "^1.2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
requests-mock = "^1.7.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
